# IC_LabWork2

./: AudioCodec.cpp  AudioCodec.h  BitStream.h  CMakeLists.txt  Golomb.cpp  Golomb.h  LosslessAudioCodec.cpp  LosslessAudioCodec.h  README.md  changeIntensity.cpp  copy.cpp  mirror.cpp  negative.cpp
part1/: CMakeLists.txt  Makefile  README  copy.cpp  rotate.cpp
part1/part1-bin/: changeIntensity  copy  mirror  negative  rotate
part2/: AudioCodec.cpp  AudioCodec.h  BitStream.h  CMakeLists.txt  Golomb.cpp  Golomb.h  ImageCodec.cpp  ImageCodec.h  Makefile  README
